--- a/talkmap/map.html
+++ b/talkmap/map.html
@@ -3,6 +3,7 @@
     <html>
     <head>
     	<title>Leaflet debug page</title>
+		<link rel="shortcut icon" type="images/logo" href="favicon.ico">
 
     	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css" />
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
