--- a/talkmap/map.html
+++ b/talkmap/map.html
@@ -12,7 +12,7 @@
     	<link rel="stylesheet" href="leaflet_dist/MarkerCluster.Default.css" />
     	<script src="leaflet_dist/leaflet.markercluster-src.js"></script>
     	<script src="org-locations.js"></script>
-	<link rel="shortcut icon" type="image/png" href="logo.png">
+	<link rel="shortcut icon" type="x-icon" href="images/logo.png">
 
     </head>
     <body>
